# gameoflife

./: CMakeLists.txt  conway.hpp  main.cpp  widgets.cpp  widgets.hpp
